--- a/src/welcome_screen.html
+++ b/src/welcome_screen.html
@@ -10,10 +10,10 @@
         <div class="outer">
             <img src="images/clouds.png" style="object-fit: fill; margin-top:-10px; margin-left: -10px; width: 105%; height: 105%;"/>
             <div class="inner">
-                <div class="left">
+                <div class="inner-left">
                     <img src="images/bicycle.png" />
                 </div>
-                <div class="right">
+                <div class="inner-right">
                     <h1>Can you power on household appliances by cycling?</h1>
                     <h2>Discover the environmental impact of six common household appliances and attempt to power on their digital twins through cycling.</h2>
                     <div id="touchscreen-message">
