--- a/src/duo_mode.html
+++ b/src/duo_mode.html
@@ -37,6 +37,7 @@
                 get: (searchParams, prop) => searchParams.get(prop),
             });
             let appliance = params.appliance;
+            let display = params.display;
 
             function go_back() {
                 location.href = "mode_selection.html?appliance=" + appliance;
@@ -48,9 +49,9 @@
 
             function select(mode) {
                 if (mode === "compete") {
-                    location.href = "timer_duration_selection.html?appliance=" + appliance + "&mode=Competition Mode";
+                    location.href = "timer_duration_selection.html?appliance=" + appliance + "&mode=Competition Mode&display=" + display;
                 } else if (mode === "cooperate") {
-                    location.href = "timer_duration_selection.html?appliance=" + appliance + "&mode=Cooperation Mode";
+                    location.href = "timer_duration_selection.html?appliance=" + appliance + "&mode=Cooperation Mode&display=" + display;
                 }
             }
         </script>
