--- a/src/mode_selection.html
+++ b/src/mode_selection.html
@@ -37,9 +37,10 @@
                 get: (searchParams, prop) => searchParams.get(prop),
             });
             let appliance = params.appliance;
+            let display = params.display;
 
             function go_back() {
-                location.href = appliance + ".html";
+                location.href = "appliance_info.html?appliance=" + appliance;
             }
 
             function go_to_home() {
@@ -48,9 +49,9 @@
 
             function select(mode) {
                 if (mode === "solo mode") {
-                    location.href = "timer_duration_selection.html?appliance=" + appliance + "&mode=Solo Mode";
+                    location.href = "timer_duration_selection.html?appliance=" + appliance + "&mode=Solo Mode&display=" + display;
                 } else {
-                    location.href = "duo_mode.html?appliance=" + appliance;
+                    location.href = "duo_mode.html?appliance=" + appliance + "&display=" + display;
                 }
             }
         </script>
