--- a/src/index.html
+++ b/src/index.html
@@ -47,8 +47,13 @@
         </div>
 
         <script>
+            const params = new Proxy(new URLSearchParams(window.location.search), {
+                get: (searchParams, prop) => searchParams.get(prop),
+            });
+            let display = params.display;
+
             function navigate(appliance) {
-                location.href = "appliance_info.html?appliance=" + appliance;
+                location.href = "appliance_info.html?appliance=" + appliance + "&display=" + display;
             }
         </script>
     </body>
