Small styling and navigation fixes

--- a/src/timer_duration_selection.html
+++ b/src/timer_duration_selection.html
@@ -42,7 +42,7 @@
             let display = params.display;
 
             function go_back() {
-                if (mode === "solo") {
+                if (mode === "Solo Mode") {
                     location.href = "mode_selection.html?appliance=" + appliance;
                 } else {
                     location.href = "duo_mode.html?appliance=" + appliance;
